# ckurs2017

./: .clang-format  .gitignore  Makefile  README.md  compile  complexdatatypen.tex  dateinverarbeitung.tex  definitions.tex  durchlesen.markdown  dynamischespeicherverwaltung.tex  einfuegesortieren.tex  endprojekt.tex  format-all-code.py  funktionen.tex  heapsort.tex  intro.tex  kontrollstrukturen.tex  pointersarrays.tex  programmierkurs_fpcu.tex  solution_heapsort.tex  speichernausdrucken.tex  standartbibliothek.tex  stapelspeicher.tex  stat.tex  trapez1.ps  tutorial1.tex  tutorial2.tex  tutorial4.tex  tutorial5.tex  variablen.tex
lecturenotes/: Makefile  Vorlesungsnotizen-student.tex  Vorlesungsnotizen.tex  preamble.tex  slides.tex  slidespreamble.tex  vorlesung1.tex  vorlesung2.tex  vorlesung3.tex  vorlesung4.tex  vorlesung5.tex  vorlesung8.tex  vorlesungsnotizen.kilepr
lecturenotes/algos/: einfuegensortieren.aux  einfuegensortieren.tex
lecturenotes/demonstrations/: 01_hello_word  02_type_conversion  02_type_conversion.c  03_sizeofarray  03_sizeofarray.c  04_signature.c  05_scanf.c  06_address.c  07_modular.c  08_unsafe_strings.c  09_argc_argv.c  10_zeiger_deklaration.c  11_ueberladung.c  13_typedef.c  14_define.c  15_unsigned_int_ptr.c  16_return_pointer.c  17_return_struct.c  18_memory_leak.c  19_pointer_arithmetic.c  20_multidim_arrays.c  21_printf.c  22_fscanf.c  Makefile  (+5 more)
tutorials/: timetable.txt  tutorials.vym
tutorials/lars/2016/solutions/: CMakeLists.txt  cos.c  ggt.c  heron.c  primzahlen.c  sgn-betrag-wurzel.c  solution_set1.tex  zeta-2.c  zeta.c
(+105 files in other folders)
